--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
          
       <nav>
-          <a href="http://127.0.0.1:5500/index.html">WEBSTUDIO</a>
+          <a href="./index.html">WEBSTUDIO</a>
           <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -76,9 +76,9 @@
         <h2>What are we doing</h2>
 
         <ul>
-          <li><img src="./img/computer1.jpg" alt="Computer on white background" width="360"/></li>
-          <li><img src="./img/phone2.jpg" alt="Phone with multi screens" width="360"/></li>
-          <li><img src="./img/notebook3.jpg" alt="Phone in the hand" width="360"/></li>
+          <li><img src="./images/computer1.jpg" alt="Computer on white background" width="360"/></li>
+          <li><img src="./images/phone2.jpg" alt="Phone with multi screens" width="360"/></li>
+          <li><img src="./images/notebook3.jpg" alt="Phone in the hand" width="360"/></li>
         </ul>
       </section>
 
@@ -87,25 +87,25 @@
 
         <ul>
           <li>
-            <img src="./img/img1Product.jpg" alt="Product designer" width="264"/>
+            <img src="./images/img1Product.jpg" alt="Product designer" width="264"/>
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="./img/img2Frontend.jpg" alt="Frontend developer" width="264"/>
+            <img src="./images/img2Frontend.jpg" alt="Frontend developer" width="264"/>
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img src="./img/img3Marketing.jpg" alt="Marketing" width="264"/>
+            <img src="./images/img3Marketing.jpg" alt="Marketing" width="264"/>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="./img/img4Designer.jpg" alt="UI Designer" width="264"/>
+            <img src="./images/img4Designer.jpg" alt="UI Designer" width="264"/>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -116,7 +116,7 @@
 
     <footer>
 
-      <a href="http://127.0.0.1:5500/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
       </p>
